2023.1/UFBA/info_01/Editais/edital_casa_y.md
# Edital Avaliação 01

Desenho técnico 2D com instrumentos computacionais.

## instruções:

- Cada Aluno deve baixar o PDF com o seu nome

- O arquivo contem o contorno de uma edificação com suas medidas

- Utilizando um software de desenho CAD, o aluno deve:

1. Desenhar o contorno com as informações disponíveis no PDF contendo o seu nome

1. Dividir o espaço de forma a conter ao menos:

    - um quarto/espaço de dormir

    - um banheiro

    - uma sala de estar

    - um espaço para refeições (sala de jantar)

    - uma cozinha

    - uma escada para o pavimento superior

<!-- 1. O projeto deve ser implantado em um terreno com curvas de nível.
    
    - Pode-se usar uma das bases de levantamento de Salvador: [Exemplo](../Terreno_topografia/terreno_exemplos.zip) -->
  
1. Todos estes espaços devem estar contidos no contorno fornecido podendo estar fora do contorno apenas: pátios, varandas, beirais, pergolados e outras áreas abertas.

1. O pavimento superior deve ter no máximo 75% da área do pavimento inferior de área construída coberta.

1. Todos os cômodos devem estar devidamente iluminados e ventilados.

1. Áreas construídas abaixo do pavimento térreo, obtidas pela relação entre a implantação e a declividade do terreno podem ser usadas livremente, desde que os cômodos propostos estejam iluminados e ventilados devidamente

1. O jogo de plantas deve conter no mínimo:

    - Planta Baixa dos 2 pavimentos

    - 1 corte passando pela escada

    - uma fachada que não seja paralela aos eixos do UCS World

    - uma planta de cobertura

1. Os desenhos, a serem enviados em formato PDF, devem apresentar:

    - Espessuras e hierarquia de traços conforme as regras de desenho técnico

    - Textos com nomes dos cômodos e as áreas dos mesmos

    - dimensões e cotas de nível

    - Hachuras de piso indicando as áreas molhadas

    - indicação de corte e fachada nas plantas

    - blocos para mostrar os layouts dos ambientes

#### Os prazos devem ser consultados no cronograma da disciplina.


